--- a/app/src/main/res/layout/activity_menu_creator.xml
+++ b/app/src/main/res/layout/activity_menu_creator.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.softmarshmallow.foodle.Views.StoreCreator.MenuCreatorActivity">
+    tools:context="com.softmarshmallow.foodle.Views.StoreCreator_Deprecated.MenuCreatorActivity_Deprecated">
 
     <LinearLayout
         android:layout_width="match_parent"
