--- a/app/src/main/res/layout/fragment_featured_view.xml
+++ b/app/src/main/res/layout/fragment_featured_view.xml
@@ -41,6 +41,7 @@
                 android:layout_marginLeft="8.7dp"
                 android:layout_marginRight="15.0dp"
                 android:layout_marginTop="14.7dp"
+                android:gravity="center_vertical"
                 android:minHeight="25px"
                 android:minWidth="25px"
                 android:orientation="horizontal">
@@ -53,11 +54,10 @@
 
                 <TextView
                     android:id="@+id/foodtrucksNearbyTextView"
-                    fontPath="fonts/AppleSDGothicNeo_Thin.otf"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="14.7dp"
-                    android:text="foodtrucks nearby"
+                    android:text="내주변 푸드트럭"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textSize="30sp"/>
             </LinearLayout>
@@ -86,6 +86,7 @@
                 android:layout_marginLeft="8.7dp"
                 android:layout_marginRight="15.0dp"
                 android:layout_marginTop="14.7dp"
+                android:gravity="center_vertical"
                 android:minHeight="25px"
                 android:minWidth="25px"
                 android:orientation="horizontal">
@@ -98,7 +99,6 @@
 
                 <TextView
                     android:id="@+id/themesTextView"
-                    fontPath="fonts/AppleSDGothicNeo_Thin.otf"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="14.7dp"
@@ -147,25 +147,27 @@
             android:layout_marginLeft="9.3dp"
             android:layout_marginRight="11.3dp"
             android:layout_marginTop="8.0dp">
+
             <LinearLayout
-                android:orientation="horizontal"
-                android:minWidth="25px"
-                android:minHeight="25px"
+                android:id="@+id/TitleContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/TitleContainer"
                 android:layout_marginLeft="8.7dp"
                 android:layout_marginRight="15.0dp"
-                android:layout_marginTop="14.7dp">
+                android:layout_marginTop="14.7dp"
+                android:gravity="center_vertical"
+                android:minHeight="25px"
+                android:minWidth="25px"
+                android:orientation="horizontal">
+
                 <ImageView
-                    android:src="@drawable/you_are_here"
                     android:layout_width="21.7dp"
                     android:layout_height="27.3dp"
+                    android:src="@drawable/you_are_here"
                     />
 
                 <TextView
                     android:id="@+id/topMenusTextView"
-                    fontPath="fonts/AppleSDGothicNeo_Thin.otf"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="14.7dp"
@@ -183,7 +185,6 @@
             android:id="@+id/newStoresContainer">
 
             <TextView
-                fontPath="fonts/AppleSDGothicNeo_Thin.otf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="7.7dp"
@@ -208,7 +209,6 @@
             android:id="@+id/festivalsContainer">
 
             <TextView
-                fontPath="fonts/AppleSDGothicNeo_Thin.otf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="7.7dp"
