--- a/app/src/main/res/layout/activity_profile_editor.xml
+++ b/app/src/main/res/layout/activity_profile_editor.xml
@@ -8,36 +8,70 @@
               android:orientation="vertical">
 
 
-
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="260dp"
         android:background="#000000">
 
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="260dp"
+            android:layout_height="match_parent"
+            android:alpha="0.8"
             android:scaleType="centerCrop"
-            android:src="@drawable/splash4_background_blured"
-            android:alpha="0.8" />
+            android:src="@drawable/splash4_background_blured"/>
 
 
-        <!--<include layout="@layout/toolbar" />-->
+        <android.support.v7.widget.Toolbar
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#00000000"
+            >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:background="@drawable/leftarrowarrows"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="bottom"
+                android:text="프로필 수정"
+                android:textColor="#fff"
+                android:textSize="20dp"/>
+
+            <TextView
+                android:id="@+id/saveTextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginRight="20dp"
+                android:text="저장"
+                android:textColor="#fff"
+                android:textSize="14dp"/>
+        </android.support.v7.widget.Toolbar>
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:layout_height="match_parent"
+            android:layout_below="@+id/toolbar"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
 
             <RelativeLayout
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="70dp">
+                >
+
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/profilePhotoImageView"
                     android:layout_width="100dp"
@@ -49,10 +83,9 @@
             </RelativeLayout>
 
 
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -65,7 +98,6 @@
                         android:id="@+id/name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="40dp"
                         android:padding="15dp"
                         android:text="닉네임"
                         android:textColor="#fff"
@@ -76,7 +108,6 @@
                         android:id="@+id/displaynameEditText"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="40dp"
                         android:layout_weight="1.3"
                         android:background="#00000000"
                         android:hint="James Bond"
@@ -93,9 +124,9 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.001dp"
-                    android:background="#fff"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"/>
+                    android:layout_marginRight="10dp"
+                    android:background="#fff"/>
 
 
                 <LinearLayout
@@ -106,42 +137,41 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="20dp"
                         android:text="TITLE"
                         android:textColor="#fff"
-                        android:textSize="18dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginLeft="10dp"/>
+                        android:textSize="18dp"/>
+
                     <EditText
                         android:id="@+id/status"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:hint="Jidhar apna CRUSH hai , udhar hich sala RUSH hai and filhaal timepass k liye only CANDYCRUSH he."
-                        android:textColorHint="#fff"
-                        android:background="#00000000"
-                        android:textColor="#fff"
-                        android:textSize="14dp"
+                        android:layout_marginLeft="10dp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"/>
+                        android:background="#00000000"
+                        android:hint="Jidhar apna CRUSH hai , udhar hich sala RUSH hai and filhaal timepass k liye only CANDYCRUSH he."
+                        android:textColor="#fff"
+                        android:textColorHint="#fff"
+                        android:textSize="14dp"/>
 
                 </LinearLayout>
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.001dp"
-                    android:background="#fff"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_marginTop="10dp"
+                    android:background="#fff"/>
 
             </LinearLayout>
-
 
 
         </LinearLayout>
 
 
-
-
-    </FrameLayout>
+    </RelativeLayout>
 
 
     <LinearLayout
@@ -185,6 +215,7 @@
 
 
         <TextView
+            android:id="@+id/textView26"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
@@ -234,7 +265,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#00000000"
-            android:inputType="textPassword"
+            android:inputType="phone"
             android:padding="20dp"/>
 
 
