--- a/app/src/main/res/layout/activity_store_creator.xml
+++ b/app/src/main/res/layout/activity_store_creator.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.softmarshmallow.foodle.Views.StoreCreator.StoreCreatorActivity">
+    tools:context="com.softmarshmallow.foodle.Views.StoreCreator_Deprecated.StoreCreatorActivity_Deprecated">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
