--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -9,11 +9,11 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <!--<ImageView
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/splash4_background_blured"/>-->
+            android:src="@drawable/splash4_background_blured"/>
 
         <ScrollView
             android:id="@+id/scrollView1"
@@ -53,7 +53,7 @@
                         android:orientation="vertical">
 
                         <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/banar1"
+                            android:id="@+id/profilePhotoImageView"
                             android:layout_width="100dp"
                             android:layout_height="100dp"
                             android:layout_gravity="center"
@@ -84,14 +84,13 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView1"
-                        fontPath="Fonts/AppleSDGothicNeo_Thin.otf"
+                        android:id="@+id/displaynameTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
                         android:gravity="center_horizontal"
                         android:letterSpacing="0.1"
-                        android:text="Winslet Profile"
+                        android:text="나는 사람이다"
                         android:textColor="#fff"
                         android:textSize="18dp"/>
                 </LinearLayout>
@@ -112,7 +111,6 @@
 
                         <TextView
                             android:id="@+id/textView2"
-                            fontPath="Fonts/AppleSDGothicNeo_Thin.otf"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -122,12 +120,11 @@
 
                         <TextView
                             android:id="@+id/textView3"
-                            fontPath="Fonts/AppleSDGothicNeo_Thin.otf"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:letterSpacing="0.1"
-                            android:text="Loves"
+                            android:text="관심푸드트럭"
                             android:textColor="#FF0000"/>
 
                         <ImageView
@@ -155,7 +152,6 @@
 
                         <TextView
                             android:id="@+id/textView4"
-                            fontPath="Fonts/AppleSDGothicNeo_Thin.otf"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -165,12 +161,11 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            fontPath="Fonts/AppleSDGothicNeo_Thin.otf"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:letterSpacing="0.1"
-                            android:text="Reviews"
+                            android:text="리뷰"
                             android:textColor="#FFF"/>
                     </LinearLayout>
 
@@ -190,70 +185,23 @@
 
                         <TextView
                             android:id="@+id/textView6"
-                            fontPath="Fonts/AppleSDGothicNeo_Thin.otf"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="5,9k"
+                            android:text="3"
                             android:textColor="#FFF"
                             android:textSize="24dp"/>
 
                         <TextView
                             android:id="@+id/textView7"
-                            fontPath="Fonts/AppleSDGothicNeo_Thin.otf"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:letterSpacing="0.1"
-                            android:text="Points"
+                            android:text="주문회수"
                             android:textColor="#FFF"/>
                     </LinearLayout>
 
-                    <View
-                        android:id="@+id/view3"
-                        android:layout_width="1dp"
-                        android:layout_height="60dp"
-                        android:background="#ACACAC"/>
-
-                    <LinearLayout
-                        android:id="@+id/linearLayout10"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/textView8"
-                            fontPath="Fonts/AppleSDGothicNeo_Thin.otf"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="1"
-                            android:textColor="#FFF"
-                            android:textSize="24dp"/>
-
-                        <TextView
-                            android:id="@+id/textView9"
-                            fontPath="Fonts/AppleSDGothicNeo_Thin.otf"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:letterSpacing="0.1"
-                            android:text="Owned Store"
-                            android:textColor="#FFf"/>
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/linearLayout11"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <ListView
-                        android:id="@+id/listview"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
                 </LinearLayout>
 
                 <LinearLayout
