--- a/app/src/main/res/layout/fragment_store_creator__form__menus.xml
+++ b/app/src/main/res/layout/fragment_store_creator__form__menus.xml
@@ -3,7 +3,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
               android:orientation="vertical"
-             tools:context="com.softmarshmallow.foodle.Views.StoreCreator.StoreCreator_Form_MenusFragment">
+             tools:context="com.softmarshmallow.foodle.Views.StoreCreator_Deprecated.StoreCreator_Form_MenusFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
