--- a/app/src/main/res/layout/fragment_store_creator_v2.xml
+++ b/app/src/main/res/layout/fragment_store_creator_v2.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.softmarshmallow.foodle.Views.StoreCreator.StoreCreatorActivity$PlaceholderFragment">
+    tools:context="com.softmarshmallow.foodle.Views.StoreCreator_Deprecated.StoreCreatorActivity_Deprecated$PlaceholderFragment">
 
     <TextView
         android:id="@+id/section_label"
