--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,7 +76,7 @@
         <!-- Custom Attr-->
 
         <!--<item name="fontPath">fonts/AppleSDGothicNeo_Thin.otf</item>-->
-        <item name="fontPath">fonts/NotoSansUI-Regular.ttf</item>
+        <!--<item name="fontPath">fonts/NotoSansUI-Regular.ttf</item>-->
     </style>
 
 
