--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,6 +74,7 @@
 
     <style name="AppFont.Thin" parent="android:TextAppearance">
         <!-- Custom Attr-->
+        <item name="fontPath">fonts/NanumBarunGothicLight.otf</item>
 
         <!--<item name="fontPath">fonts/AppleSDGothicNeo_Thin.otf</item>-->
         <!--<item name="fontPath">fonts/NotoSansUI-Regular.ttf</item>-->
